Update second bill date

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             this.bills.push(
                 new Bill({
                     byn: (options.byn * 10 / 100),
-                    paid_at: '',
+                    paid_at: '2019-10-19',
                     initial_date: this.initial_date
                 })
             );
