Added third bill

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             this.bills.push(
                 new Bill({
                     byn: (options.byn * 10 / 100),
-                    paid_at: '',
+                    paid_at: '2020-10-22',
                     initial_date: this.initial_date
                 })
             );
